# parinterp

./: .gitignore  CMakeLists.txt  README.md  __init__.py  example.ipynb  install.sh  path.json  requirements.txt  setup.py
benchmark/: bench.py  benchmark.ipynb  benchmark.py  workers_benchmark.py
cpp/: CMakeLists.txt
cpp/src/: delaunay.cpp  interpolator.h  main.cpp  mock.cpp  radixsort.h  triangulation.h  triangulator.h  utils.h
examples/: comparison.ipynb  example.ipynb
interp/: interpolator.py
parinterp/: __init__.py  interpolator.py
pydelaunay_interp/: interpolator.py
python/: interpolator.py
scripts/: big_test.py
src/: delaunay.cpp  delaunay.h  geometry.h  hash_map.h  interpolator.h  neighbors.h  oct_tree.h  triangulation.h
